--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,11 +689,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>patient_name</th>\n",
+       "      <th>patient_email</th>\n",
+       "      <th>doctor_phone</th>\n",
+       "      <th>patient_gender</th>\n",
+       "      <th>patient_dob</th>\n",
+       "      <th>patient_diabetic</th>\n",
+       "      <th>patient_allergic</th>\n",
+       "      <th>patient_weight_kg</th>\n",
+       "      <th>patient_height_sm</th>\n",
+       "      <th>patient_nhs_number</th>\n",
+       "      <th>doctor_name</th>\n",
+       "      <th>appointment_date</th>\n",
+       "      <th>patient_show</th>\n",
+       "      <th>is_regular_visit</th>\n",
+       "      <th>prescribed_medicines</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Celestyna Dillimore</td>\n",
+       "      <td>cdillimore0@dion.ne.jp</td>\n",
+       "      <td>674-914-1212</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10/18/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>59</td>\n",
+       "      <td>176</td>\n",
+       "      <td>8.200152e+09</td>\n",
+       "      <td>Sarena Waliszek</td>\n",
+       "      <td>5/1/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>triamcinolone acetonide</td>\n",
+       "      <td>I669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Meta Michieli</td>\n",
+       "      <td>mmichieli1@loc.gov</td>\n",
+       "      <td>172-580-3586</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2/8/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>77</td>\n",
+       "      <td>186</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Farris Robinet</td>\n",
+       "      <td>12/7/2017</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Cordie Sancto</td>\n",
+       "      <td>csancto2@cafepress.com</td>\n",
+       "      <td>794-222-5085</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10/9/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>90</td>\n",
+       "      <td>177</td>\n",
+       "      <td>6.145594e+09</td>\n",
+       "      <td>Kaspar Spitaro</td>\n",
+       "      <td>10/5/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Josh De Ambrosis</td>\n",
+       "      <td>jde3@amazon.co.jp</td>\n",
+       "      <td>856-540-5195</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9/10/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>70</td>\n",
+       "      <td>150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rafferty Fowls</td>\n",
+       "      <td>10/21/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Delinda Alfonsini</td>\n",
+       "      <td>dalfonsini4@opensource.org</td>\n",
+       "      <td>938-978-1131</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2/26/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>82</td>\n",
+       "      <td>140</td>\n",
+       "      <td>4.804758e+08</td>\n",
+       "      <td>Glenna MacNeachtain</td>\n",
+       "      <td>11/15/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id         patient_name               patient_email  doctor_phone  \\\n",
+       "0   1  Celestyna Dillimore      cdillimore0@dion.ne.jp  674-914-1212   \n",
+       "1   2        Meta Michieli          mmichieli1@loc.gov  172-580-3586   \n",
+       "2   3        Cordie Sancto      csancto2@cafepress.com  794-222-5085   \n",
+       "3   4     Josh De Ambrosis           jde3@amazon.co.jp  856-540-5195   \n",
+       "4   5    Delinda Alfonsini  dalfonsini4@opensource.org  938-978-1131   \n",
+       "\n",
+       "  patient_gender patient_dob  patient_diabetic  patient_allergic  \\\n",
+       "0         Female  10/18/2018             False              True   \n",
+       "1         Female    2/8/2018             False              True   \n",
+       "2         Female   10/9/2018              True              True   \n",
+       "3           Male   9/10/2018              True              True   \n",
+       "4         Female   2/26/2018             False              True   \n",
+       "\n",
+       "   patient_weight_kg  patient_height_sm  patient_nhs_number  \\\n",
+       "0                 59                176        8.200152e+09   \n",
+       "1                 77                186                 NaN   \n",
+       "2                 90                177        6.145594e+09   \n",
+       "3                 70                150                 NaN   \n",
+       "4                 82                140        4.804758e+08   \n",
+       "\n",
+       "           doctor_name appointment_date  patient_show  is_regular_visit  \\\n",
+       "0      Sarena Waliszek         5/1/2018          True              True   \n",
+       "1       Farris Robinet        12/7/2017          True              True   \n",
+       "2       Kaspar Spitaro        10/5/2018         False             False   \n",
+       "3       Rafferty Fowls       10/21/2018         False              True   \n",
+       "4  Glenna MacNeachtain       11/15/2018         False             False   \n",
+       "\n",
+       "      prescribed_medicines diagnosis  \n",
+       "0  triamcinolone acetonide      I669  \n",
+       "1                      NaN       NaN  \n",
+       "2                      NaN       NaN  \n",
+       "3                      NaN       NaN  \n",
+       "4                      NaN       NaN  "
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients.head()\n"
    ]
   },
   {
@@ -705,11 +892,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                        int64\n",
+       "patient_name             object\n",
+       "patient_email            object\n",
+       "doctor_phone             object\n",
+       "patient_gender           object\n",
+       "patient_dob              object\n",
+       "patient_diabetic           bool\n",
+       "patient_allergic           bool\n",
+       "patient_weight_kg         int64\n",
+       "patient_height_sm         int64\n",
+       "patient_nhs_number      float64\n",
+       "doctor_name              object\n",
+       "appointment_date         object\n",
+       "patient_show               bool\n",
+       "is_regular_visit           bool\n",
+       "prescribed_medicines     object\n",
+       "diagnosis                object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients.dtypes\n"
    ]
   },
   {
@@ -723,11 +938,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                               int64\n",
+       "patient_name                    object\n",
+       "patient_email                   object\n",
+       "doctor_phone                    object\n",
+       "patient_gender                  object\n",
+       "patient_dob             datetime64[ns]\n",
+       "patient_diabetic                  bool\n",
+       "patient_allergic                  bool\n",
+       "patient_weight_kg                int64\n",
+       "patient_height_sm                int64\n",
+       "patient_nhs_number             float64\n",
+       "doctor_name                     object\n",
+       "appointment_date        datetime64[ns]\n",
+       "patient_show                      bool\n",
+       "is_regular_visit                  bool\n",
+       "prescribed_medicines            object\n",
+       "diagnosis                       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients.patient_dob=pd.to_datetime(patients.patient_dob)\n",
+    "patients.appointment_date=pd.to_datetime(patients.appointment_date)\n",
+    "patients.dtypes"
    ]
   },
   {
@@ -739,11 +984,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_gender                  object\n",
+       "patient_dob             datetime64[ns]\n",
+       "patient_diabetic                  bool\n",
+       "patient_allergic                  bool\n",
+       "patient_weight_kg                int64\n",
+       "patient_height_sm                int64\n",
+       "doctor_name                     object\n",
+       "appointment_date        datetime64[ns]\n",
+       "patient_show                      bool\n",
+       "is_regular_visit                  bool\n",
+       "prescribed_medicines            object\n",
+       "diagnosis                       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients=patients.drop([\"id\",\"patient_name\",\"patient_email\",\"patient_nhs_number\",\"doctor_phone\"],axis=1)\n",
+    "patients.dtypes"
    ]
   },
   {
@@ -761,11 +1030,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_gender            0\n",
+       "patient_dob               0\n",
+       "patient_diabetic          0\n",
+       "patient_allergic          0\n",
+       "patient_weight_kg         0\n",
+       "patient_height_sm         0\n",
+       "doctor_name              58\n",
+       "appointment_date          0\n",
+       "patient_show              0\n",
+       "is_regular_visit          0\n",
+       "prescribed_medicines    488\n",
+       "diagnosis               488\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients.isnull().sum()\n"
    ]
   },
   {
@@ -783,11 +1075,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "patients.prescribed_medicines=patients.prescribed_medicines.fillna(\"no prescription\")\n",
+    "patients.diagnosis=patients.diagnosis.fillna(\"no diagnosis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_gender           0\n",
+       "patient_dob              0\n",
+       "patient_diabetic         0\n",
+       "patient_allergic         0\n",
+       "patient_weight_kg        0\n",
+       "patient_height_sm        0\n",
+       "doctor_name             58\n",
+       "appointment_date         0\n",
+       "patient_show             0\n",
+       "is_regular_visit         0\n",
+       "prescribed_medicines     0\n",
+       "diagnosis                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patients.isnull().sum()"
    ]
   },
   {
@@ -799,11 +1124,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "patient_gender          0\n",
+       "patient_dob             0\n",
+       "patient_diabetic        0\n",
+       "patient_allergic        0\n",
+       "patient_weight_kg       0\n",
+       "patient_height_sm       0\n",
+       "doctor_name             0\n",
+       "appointment_date        0\n",
+       "patient_show            0\n",
+       "is_regular_visit        0\n",
+       "prescribed_medicines    0\n",
+       "diagnosis               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients=patients.dropna()\n",
+    "patients.isnull().sum()"
    ]
   },
   {
