--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -1900,10 +1900,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "La columna patient_weight_kg muestra una una mayor diferencia según el cluster en el que está."
+    "#La columna patient_weight_kg y patient_height_kg muestra una una mayor diferencia según el cluster en el que está."
    ]
   },
   {
