--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -563,20 +563,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2, 3], dtype=int32), array([57, 34, 66, 21]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "np.unique(wine_df_clusters.labels_, return_counts = True)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answer here:\n"
+    "The largest cluster is cluster 2 with 66 elements.\n"
    ]
   },
   {
@@ -588,11 +597,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(178, 13)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "wine['data'].shape\n"
    ]
   },
   {
@@ -604,11 +624,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.423e+01, 1.710e+00, 2.430e+00, 1.560e+01, 1.270e+02, 2.800e+00,\n",
+       "        3.060e+00, 2.800e-01, 2.290e+00, 5.640e+00, 1.040e+00, 3.920e+00,\n",
+       "        1.065e+03],\n",
+       "       [1.320e+01, 1.780e+00, 2.140e+00, 1.120e+01, 1.000e+02, 2.650e+00,\n",
+       "        2.760e+00, 2.600e-01, 1.280e+00, 4.380e+00, 1.050e+00, 3.400e+00,\n",
+       "        1.050e+03],\n",
+       "       [1.316e+01, 2.360e+00, 2.670e+00, 1.860e+01, 1.010e+02, 2.800e+00,\n",
+       "        3.240e+00, 3.000e-01, 2.810e+00, 5.680e+00, 1.030e+00, 3.170e+00,\n",
+       "        1.185e+03],\n",
+       "       [1.437e+01, 1.950e+00, 2.500e+00, 1.680e+01, 1.130e+02, 3.850e+00,\n",
+       "        3.490e+00, 2.400e-01, 2.180e+00, 7.800e+00, 8.600e-01, 3.450e+00,\n",
+       "        1.480e+03],\n",
+       "       [1.324e+01, 2.590e+00, 2.870e+00, 2.100e+01, 1.180e+02, 2.800e+00,\n",
+       "        2.690e+00, 3.900e-01, 1.820e+00, 4.320e+00, 1.040e+00, 2.930e+00,\n",
+       "        7.350e+02]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "wine['data'][0:5]\n"
    ]
   },
   {
@@ -628,11 +673,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'where' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-2c0a1b848e37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwine_df_clusters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mclusters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumn_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmeans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclusters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-2c0a1b848e37>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwine_df_clusters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mclusters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumn_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmeans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclusters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'where' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "labels = np.unique(wine_df_clusters.labels_)\n",
+    "clusters = [np.column_stack(where(label == k)) for k in labels]\n",
+    "means = np.average(clusters)\n"
    ]
   },
   {
@@ -646,11 +706,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "patients = pd.read_csv('../patient-admission-dataset-for-learning-data-mining.csv')"
+    "patients = pd.read_csv('../patient-admission-dataset-for-learning-data-mining.csv')\n"
    ]
   },
   {
@@ -662,11 +722,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>patient_name</th>\n",
+       "      <th>patient_email</th>\n",
+       "      <th>doctor_phone</th>\n",
+       "      <th>patient_gender</th>\n",
+       "      <th>patient_dob</th>\n",
+       "      <th>patient_diabetic</th>\n",
+       "      <th>patient_allergic</th>\n",
+       "      <th>patient_weight_kg</th>\n",
+       "      <th>patient_height_sm</th>\n",
+       "      <th>patient_nhs_number</th>\n",
+       "      <th>doctor_name</th>\n",
+       "      <th>appointment_date</th>\n",
+       "      <th>patient_show</th>\n",
+       "      <th>is_regular_visit</th>\n",
+       "      <th>prescribed_medicines</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Celestyna Dillimore</td>\n",
+       "      <td>cdillimore0@dion.ne.jp</td>\n",
+       "      <td>674-914-1212</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10/18/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>59</td>\n",
+       "      <td>176</td>\n",
+       "      <td>8.200152e+09</td>\n",
+       "      <td>Sarena Waliszek</td>\n",
+       "      <td>5/1/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>triamcinolone acetonide</td>\n",
+       "      <td>I669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Meta Michieli</td>\n",
+       "      <td>mmichieli1@loc.gov</td>\n",
+       "      <td>172-580-3586</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2/8/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>77</td>\n",
+       "      <td>186</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Farris Robinet</td>\n",
+       "      <td>12/7/2017</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Cordie Sancto</td>\n",
+       "      <td>csancto2@cafepress.com</td>\n",
+       "      <td>794-222-5085</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>10/9/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>90</td>\n",
+       "      <td>177</td>\n",
+       "      <td>6.145594e+09</td>\n",
+       "      <td>Kaspar Spitaro</td>\n",
+       "      <td>10/5/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Josh De Ambrosis</td>\n",
+       "      <td>jde3@amazon.co.jp</td>\n",
+       "      <td>856-540-5195</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9/10/2018</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>70</td>\n",
+       "      <td>150</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rafferty Fowls</td>\n",
+       "      <td>10/21/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Delinda Alfonsini</td>\n",
+       "      <td>dalfonsini4@opensource.org</td>\n",
+       "      <td>938-978-1131</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2/26/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>82</td>\n",
+       "      <td>140</td>\n",
+       "      <td>4.804758e+08</td>\n",
+       "      <td>Glenna MacNeachtain</td>\n",
+       "      <td>11/15/2018</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id         patient_name               patient_email  doctor_phone  \\\n",
+       "0   1  Celestyna Dillimore      cdillimore0@dion.ne.jp  674-914-1212   \n",
+       "1   2        Meta Michieli          mmichieli1@loc.gov  172-580-3586   \n",
+       "2   3        Cordie Sancto      csancto2@cafepress.com  794-222-5085   \n",
+       "3   4     Josh De Ambrosis           jde3@amazon.co.jp  856-540-5195   \n",
+       "4   5    Delinda Alfonsini  dalfonsini4@opensource.org  938-978-1131   \n",
+       "\n",
+       "  patient_gender patient_dob  patient_diabetic  patient_allergic  \\\n",
+       "0         Female  10/18/2018             False              True   \n",
+       "1         Female    2/8/2018             False              True   \n",
+       "2         Female   10/9/2018              True              True   \n",
+       "3           Male   9/10/2018              True              True   \n",
+       "4         Female   2/26/2018             False              True   \n",
+       "\n",
+       "   patient_weight_kg  patient_height_sm  patient_nhs_number  \\\n",
+       "0                 59                176        8.200152e+09   \n",
+       "1                 77                186                 NaN   \n",
+       "2                 90                177        6.145594e+09   \n",
+       "3                 70                150                 NaN   \n",
+       "4                 82                140        4.804758e+08   \n",
+       "\n",
+       "           doctor_name appointment_date  patient_show  is_regular_visit  \\\n",
+       "0      Sarena Waliszek         5/1/2018          True              True   \n",
+       "1       Farris Robinet        12/7/2017          True              True   \n",
+       "2       Kaspar Spitaro        10/5/2018         False             False   \n",
+       "3       Rafferty Fowls       10/21/2018         False              True   \n",
+       "4  Glenna MacNeachtain       11/15/2018         False             False   \n",
+       "\n",
+       "      prescribed_medicines diagnosis  \n",
+       "0  triamcinolone acetonide      I669  \n",
+       "1                      NaN       NaN  \n",
+       "2                      NaN       NaN  \n",
+       "3                      NaN       NaN  \n",
+       "4                      NaN       NaN  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "patients.head()\n"
    ]
   },
   {
