--- a/module-3/lab-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning/your-code/main.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries:\n",
+    "# Import your libraries:#\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -378,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
