--- a/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-sklearn-and-unsupervised-learning/your-code/main.ipynb
@@ -1854,12 +1854,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "plt.scatter(x=X[:,0], y=X[:,1], c=y;"
+    "# Your code here:\n"
    ]
   }
  ],
