--- a/module-3/lab-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning/your-code/main.ipynb
@@ -374,12 +374,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "*The only transformation needed (in my oppinion) is changing the type of the categorical variables to 'category'*"
    ]
   },
   {
@@ -399,15 +397,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicassen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.052933</td>\n",
+       "      <td>0.523568</td>\n",
+       "      <td>-0.041115</td>\n",
+       "      <td>-0.589367</td>\n",
+       "      <td>-0.043569</td>\n",
+       "      <td>-0.066339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.391302</td>\n",
+       "      <td>0.544458</td>\n",
+       "      <td>0.170318</td>\n",
+       "      <td>-0.270136</td>\n",
+       "      <td>0.086407</td>\n",
+       "      <td>0.089151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.447029</td>\n",
+       "      <td>0.408538</td>\n",
+       "      <td>-0.028157</td>\n",
+       "      <td>-0.137536</td>\n",
+       "      <td>0.133232</td>\n",
+       "      <td>2.243293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.100111</td>\n",
+       "      <td>-0.624020</td>\n",
+       "      <td>-0.392977</td>\n",
+       "      <td>0.687144</td>\n",
+       "      <td>-0.498588</td>\n",
+       "      <td>0.093411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.840239</td>\n",
+       "      <td>-0.052396</td>\n",
+       "      <td>-0.079356</td>\n",
+       "      <td>0.173859</td>\n",
+       "      <td>-0.231918</td>\n",
+       "      <td>1.299347</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Channel Region     Fresh      Milk   Grocery    Frozen  Detergents_Paper  \\\n",
+       "0       2      3  0.052933  0.523568 -0.041115 -0.589367         -0.043569   \n",
+       "1       2      3 -0.391302  0.544458  0.170318 -0.270136          0.086407   \n",
+       "2       2      3 -0.447029  0.408538 -0.028157 -0.137536          0.133232   \n",
+       "3       1      3  0.100111 -0.624020 -0.392977  0.687144         -0.498588   \n",
+       "4       2      3  0.840239 -0.052396 -0.079356  0.173859         -0.231918   \n",
+       "\n",
+       "   Delicassen  \n",
+       "0   -0.066339  \n",
+       "1    0.089151  \n",
+       "2    2.243293  \n",
+       "3    0.093411  \n",
+       "4    1.299347  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your import here:\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "scaler=StandardScaler()\n",
+    "customers_scale=customers.copy()\n",
+    "cols=['Fresh','Milk','Grocery','Frozen','Detergents_Paper','Delicassen']\n",
+    "customers_scale[cols] = scaler.fit_transform(customers_scale[cols])\n",
+    "customers_scale.head()\n",
+    "\n"
    ]
   },
   {
@@ -421,13 +538,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicassen</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13265</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>4221</td>\n",
+       "      <td>6404</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1788</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22615</td>\n",
+       "      <td>5410</td>\n",
+       "      <td>7198</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>1777</td>\n",
+       "      <td>5185</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Channel Region  Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen  \\\n",
+       "0       2      3  12669  9656     7561     214              2674        1338   \n",
+       "1       2      3   7057  9810     9568    1762              3293        1776   \n",
+       "2       2      3   6353  8808     7684    2405              3516        7844   \n",
+       "3       1      3  13265  1196     4221    6404               507        1788   \n",
+       "4       2      3  22615  5410     7198    3915              1777        5185   \n",
+       "\n",
+       "   labels  \n",
+       "0       1  \n",
+       "1       1  \n",
+       "2       1  \n",
+       "3       2  \n",
+       "4       2  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=4)\n",
+    "kmeans.fit(customers_scale)\n",
+    "customers['labels']=kmeans.labels_\n",
+    "customers.head()\n"
    ]
   },
   {
@@ -439,11 +679,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    302\n",
+       "1    117\n",
+       "3     11\n",
+       "0     10\n",
+       "Name: labels, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "customers.labels.value_counts()\n"
    ]
   },
   {
