--- a/module-3/lab-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning/your-code/main.ipynb
@@ -393,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x107cd8358>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10cd46ba8>"
       ]
      },
      "execution_count": 6,
@@ -425,7 +425,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x108009cf8>"
+       "<seaborn.axisgrid.PairGrid at 0x11ef68a58>"
       ]
      },
      "execution_count": 7,
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "4  0.840239 -0.052396 -0.079356  0.173859         -0.231918    1.299347"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -668,7 +668,7 @@
        "      <td>214</td>\n",
        "      <td>2674</td>\n",
        "      <td>1338</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -680,7 +680,7 @@
        "      <td>1762</td>\n",
        "      <td>3293</td>\n",
        "      <td>1776</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -692,7 +692,7 @@
        "      <td>2405</td>\n",
        "      <td>3516</td>\n",
        "      <td>7844</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -704,7 +704,7 @@
        "      <td>6404</td>\n",
        "      <td>507</td>\n",
        "      <td>1788</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -716,7 +716,7 @@
        "      <td>3915</td>\n",
        "      <td>1777</td>\n",
        "      <td>5185</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -731,14 +731,14 @@
        "4        2       3  22615  5410     7198    3915              1777   \n",
        "\n",
        "   Delicassen  labels  \n",
-       "0        1338       0  \n",
-       "1        1776       0  \n",
-       "2        7844       0  \n",
-       "3        1788       2  \n",
-       "4        5185       2  "
+       "0        1338       3  \n",
+       "1        1776       3  \n",
+       "2        7844       3  \n",
+       "3        1788       1  \n",
+       "4        5185       1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,24 +762,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'labels' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-589a72b39674>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'labels' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "1    305\n",
+       "3    120\n",
+       "0     10\n",
+       "2      5\n",
+       "Name: labels, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "labels.value_counts()"
+    "customers[\"labels\"].value_counts()"
    ]
   },
   {
