--- a/module-3/lab-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning/your-code/main.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "Name: labels, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "Name: labels_DBSCAN, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -941,8 +941,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ninguno parece demasiado bueno pero, a priori parece que los resultados de DBSCAN son mejores\n",
-    "# que los de K-means."
+    "# No tengo muy claro cuál puede ser mejor la verdad."
    ]
   },
   {
@@ -970,9 +969,7 @@
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your comment here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
