commit del miércoles

--- a/module-3/lab-unsupervised-learning/your-code/main.ipynb
+++ b/module-3/lab-unsupervised-learning/your-code/main.ipynb
@@ -1590,12 +1590,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "### Your comment here\n",
+    "#### It performs terribly no matter how many clusters you give to the model"
    ]
   },
   {
