--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -1,6 +1,174 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Text Cleaning\n",
+    "\n",
+    "input = @Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\")\n",
+    "\n",
+    "output = ironhack s  q website  is\n",
+    "\n",
+    "Notes:\n",
+    "\n",
+    "Use regular expressions to identify URL patterns and remove URLs.\n",
+    "\n",
+    "You don't want to replace special characters/numbers with an empty string. Because that will join words that shouldn't be joined. For instance, if you replace the ' in you're, you will get youre which is undesirable. So instead, replace special characters and numbers with a whitespace.\n",
+    "\n",
+    "The order matters in terms of what to clean before others. For example, if you clean special characters before URLs, it will be difficult to identify the URLs patterns.\n",
+    "\n",
+    "Don't worry about single letters and multiple whitespaces in your returned string. In our next steps those issues will be fixed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_up(s):\n",
+    "    \"\"\"\n",
+    "    Cleans up numbers, URLs, and special characters from a string.\n",
+    "\n",
+    "    Args:\n",
+    "        s: The string to be cleaned up.\n",
+    "\n",
+    "    Returns:\n",
+    "        A string that has been cleaned up.\n",
+    "    \"\"\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenization\n",
+    "\n",
+    "Write a function called tokenize to convert a string to a list of words.\n",
+    "\n",
+    "input = ironhack s q website is\n",
+    "\n",
+    "output = ['ironhack', 's', 'q', 'website', 'is']\n",
+    "\n",
+    "Hint: use the word_tokenize function in NLTK."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize(s):\n",
+    "    \"\"\"\n",
+    "    Tokenize a string.\n",
+    "\n",
+    "    Args:\n",
+    "        s: String to be tokenized.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of words as the result of tokenization.\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stemming and Lemmatization\n",
+    "\n",
+    "In NLTK, there are three stemming libraries: Porter, Snowball, and Lancaster. The difference among the three is the agressiveness with which they perform stemming. Porter is the most gentle stemmer that preserves the word's original form if it has doubts. In contrast, Lancaster is the most aggressive one that sometimes produces wrong outputs. And Snowball is in between. In most cases you will use either Porter or Snowball.\n",
+    "\n",
+    "Lemmatization differs from stemming in that lemmatization cares about whether the reduced form belongs to the target language and it often requires the context (i.e. POS or parts-of-speech) in order to perform the correct transformation. For example, the Word Net lemmatizer in NLTK yields different results with and without being told that was is a verb:\n",
+    "\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "lemmatizer.lemmatize('was')\n",
+    "\n",
+    "'wa'\n",
+    "\n",
+    "lemmatizer.lemmatize('runs', pos='v')\n",
+    "\n",
+    "'be'\n",
+    "\n",
+    "In your Jupyter Notebook, import the necessary libraries and define a function called stem_and_lemmatize that performs both stemming and lemmatization on a list of words. Don't worry about the POS part of lemmatization for now.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stem_and_lemmatize(l):\n",
+    "    \"\"\"\n",
+    "    Perform stemming and lemmatization on a list of words.\n",
+    "\n",
+    "    Args:\n",
+    "        l: A list of strings.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of strings after being stemmed and lemmatized.\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop Words Removal\n",
+    "\n",
+    "Stop Words are the most commonly used words in a language that don't contribute to the main meaning of the texts. Examples of English stop words are i, me, is, and, the, but, and here. We want to remove stop words from analysis because otherwise stop words will take the overwhelming portion in our tokenized word list and the NLP algorithms will have problems in identifying the truely important words.\n",
+    "\n",
+    "NLTK has a stopwords package that allows us to import the most common stop words in over a dozen langauges including English, Spanish, French, German, Dutch, Portuguese, Italian, etc. These are the bare minimum stop words (100-150 words in each language) that can get beginners started. Some other NLP packages such as stop-words and wordcloud provide bigger lists of stop words.\n",
+    "\n",
+    "Now in your Jupyter Notebook, create a function called remove_stopwords that loop through a list of words that have been stemmed and lemmatized to check and remove stop words. Return a new list where stop words have been removed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(l):\n",
+    "    \"\"\"\n",
+    "    Remove English stopwords from a list of strings.\n",
+    "\n",
+    "    Args:\n",
+    "        l: A list of strings.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of strings after stop words are removed.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "'''from nltk.corpus import stopwords \n",
+    "from nltk.tokenize import word_tokenize \n",
+    "  \n",
+    "example_sent = \"This is a sample sentence, showing off the stop words filtration.\"\n",
+    "  \n",
+    "stop_words = set(stopwords.words('english')) \n",
+    "  \n",
+    "word_tokens = word_tokenize(example_sent) \n",
+    "  \n",
+    "filtered_sentence = [w for w in word_tokens if not w in stop_words] \n",
+    "  \n",
+    "filtered_sentence = [] \n",
+    "  \n",
+    "for w in word_tokens: \n",
+    "    if w not in stop_words: \n",
+    "        filtered_sentence.append(w) \n",
+    "  \n",
+    "print(word_tokens) \n",
+    "print(filtered_sentence)'''"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
