--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -23,21 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@ironhack's-#q website 776-is \")\n",
+      " ironhack s  q website 776 is   \n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
+    "\n",
     "def clean_up(s):\n",
-    "    \"\"\"\n",
-    "    Cleans up numbers, URLs, and special characters from a string.\n",
-    "\n",
-    "    Args:\n",
-    "        s: The string to be cleaned up.\n",
-    "\n",
-    "    Returns:\n",
-    "        A string that has been cleaned up.\n",
-    "    \"\"\"\n",
-    "    "
+    "    \n",
+    "    url = re.findall('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\), ]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', s)\n",
+    "    url_to_string = ''.join(url)\n",
+    "    s = s.replace(url_to_string, '').lower()\n",
+    "    print(s)\n",
+    "    \n",
+    "    special_characters = [\"'\",'\"','@','  ','\\\\','`','*','_','{','}','[',']','(',')','>','<','#','+','-','.','!','$','|','€' ,'%','&','/','\\'']\n",
+    "    \n",
+    "    for character in s:\n",
+    "        if character in special_characters:\n",
+    "            s = s.replace(character,\" \")\n",
+    "    return print(s)\n",
+    "            \n",
+    "clean_up(\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\\\")\")"
    ]
   },
   {
