--- a/module-3/lab-nlp/challenge-2.ipynb
+++ b/module-3/lab-nlp/challenge-2.ipynb
@@ -23,15 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@ironhack's-#q website 776-is \")\n",
-      " ironhack s  q website 776 is   \n"
+      "ironhack s q website is\n"
      ]
     }
    ],
@@ -43,14 +42,17 @@
     "    url = re.findall('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\), ]|(?:%[0-9a-fA-F][0-9a-fA-F]))+', s)\n",
     "    url_to_string = ''.join(url)\n",
     "    s = s.replace(url_to_string, '').lower()\n",
-    "    print(s)\n",
     "    \n",
-    "    special_characters = [\"'\",'\"','@','  ','\\\\','`','*','_','{','}','[',']','(',')','>','<','#','+','-','.','!','$','|','€' ,'%','&','/','\\'']\n",
+    "    numbers = re.findall('[0-9]', s)\n",
+    "    numbers_to_string = ''.join(numbers)\n",
+    "    s = s.replace(numbers_to_string,'')\n",
+    "    \n",
+    "    special_characters = [\"'\",'\"','@','\\\\','`','*','_','{','}','[',']','(',')','>','<','#','+','-','.','!','$','|','€' ,'%','&','/','\\'']\n",
     "    \n",
     "    for character in s:\n",
     "        if character in special_characters:\n",
     "            s = s.replace(character,\" \")\n",
-    "    return print(s)\n",
+    "    return print(' '.join(s.split()))\n",
     "            \n",
     "clean_up(\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\\\")\")"
    ]
